--- a/package.json
+++ b/package.json
@@ -1,32 +1,39 @@
 {
-  "name": "denote-website",
-  "version": "1.0.0",
-  "description": "Note organization application",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "seed": "node ./tasks/seed.js",
-    "clear": "node ./tasks/clear.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fborja44/denote.git"
-  },
-  "author": "Francis Borja",
-  "license": "GPL-2.0",
-  "bugs": {
-    "url": "https://github.com/fborja44/denote/issues"
-  },
-  "homepage": "https://github.com/fborja44/denote#readme",
+  "name": "denote",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "chalk": "^4.1.1",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.3.2",
-    "express-session": "^1.17.1",
-    "handlebars": "^4.7.7",
-    "mongodb": "^3.6.6",
-    "xss": "^1.0.9"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
