--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.1",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
     "path": "^0.12.7",
