feat: toggle between maximize/restore icon on button press and update app metadata

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "denote",
+  "productName": "Denote! App",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
