--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
   "main": "src/electron/electron.js",
   "homepage": "./",
   "dependencies": {
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
