--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,12 @@
 {
   "name": "denote",
+  "author": "Francis Borja",
   "productName": "Denote! App",
+  "description": "A simple note taking application.",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
-  "main": "src/electron/electron.js",
+  "main": "public/electron.js",
   "homepage": "./",
   "dependencies": {
     "@emotion/react": "^11.4.0",
@@ -19,6 +21,7 @@
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
+    "electron-is-dev": "^2.0.0",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -34,9 +37,22 @@
     "react-test": "react-scripts test",
     "react-eject": "react-scripts eject",
     "electron-build": "electron-builder",
-    "build": "npm run react-build && npm run electron-build",
+    "build": "npm run react-build && npm run electron-build -c.extraMetadata.main=build/electron.js",
     "start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
+  "build": {
+    "appId": "com.denote.app",
+    "files": [
+      "dist/**/*",
+      "build/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
+  },
+  "electron-pack": "build --em.main=build/electron.js",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -59,7 +75,6 @@
     "concurrently": "^6.2.0",
     "electron": "^13.1.4",
     "electron-builder": "^22.11.7",
-    "electron-is-dev": "^2.0.0",
     "typescript": "^4.3.5",
     "wait-on": "^6.0.0"
   }
