--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,12 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
+    "codemirror": "^5.62.2",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-markdown": "^6.0.2",
