--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "Backend for Denote notes application.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.ts"
+    "start": "ts-node ./src/index.ts",
+    "seed": "ts-node ./src/tasks/seed.ts",
+    "build": "tsc -p ."
   },
   "author": "Francis Borja",
   "license": "MIT",
@@ -12,7 +14,8 @@
     "chalk": "^4.1.1",
     "express": "^4.17.1",
     "http": "0.0.1-security",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "ts-node": "^10.2.1"
   },
   "devDependencies": {
     "@types/node": "^16.7.1",
