--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "https": "^1.0.0",
+    "mongodb": "^3.6.6",
+    "nanoid": "^3.1.25",
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
