--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^4.1.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "https": "^1.0.0",
