--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.6.6",
     "@types/node": "^16.7.1",
     "typescript": "^4.3.5"
   }
