--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "codemirror": "^5.62.3",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
+    "firebase": "^9.19.1",
     "notistack": "^3.0.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
