--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,8 @@
     "react-markdown": "^6.0.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
+    "react-tooltip": "^5.11.1",
     "redux": "^4.2.1",
     "web-vitals": "^1.1.2"
   },
