--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.11.1",
     "redux": "^4.2.1",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
