--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "https": "^1.0.0",
     "mongodb": "^3.6.6",
     "nanoid": "^3.1.25",
+    "socket.io": "^4.6.1",
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
