chore: bump dependencies, update images, branding

--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "denote",
+  "name": "notify",
   "author": "Francis Borja",
-  "productName": "Denote! App",
+  "productName": "Notify App",
   "description": "A simple note taking application.",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "private": true,
   "proxy": "http://localhost:3001",
   "main": "public/electron.js",
@@ -28,7 +28,7 @@
     "notistack": "^3.0.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
-    "react-codemirror2": "^7.2.1",
+    "react-codemirror2": "^7.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.8.0",
     "react-markdown": "^6.0.3",
