--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,13 @@
 {
-  "name": "denote-server",
+  "name": "notify-server",
   "version": "1.0.0",
   "bin": "./src/index.ts",
-  "description": "Backend for Denote notes application.",
+  "description": "Backend for the Notify note-taking application.",
   "main": "index.js",
   "scripts": {
     "start": "ts-node ./src/index.ts",
     "seed": "ts-node ./src/tasks/seed.ts",
-    "build": "tsc -p .",
-    "pkg": "pkg ./src/index.ts"
-  },
-  "pkg": {
-    "outputPath": "dist",
-    "assets": [
-      "./node_modules/**/*",
-      "./src/**/*"
-    ],
-    "targets": [
-      "node14-win-x64"
-    ]
+    "build": "tsc -p ."
   },
   "author": "Francis Borja",
   "license": "MIT",
@@ -36,7 +25,6 @@
   "devDependencies": {
     "@types/mongodb": "^3.6.6",
     "@types/node": "^16.7.1",
-    "pkg": "^5.8.0",
     "typescript": "^4.3.5"
   }
 }
